# PdfProcess

./: .gitignore  BoldenLines.py  CellsToExcel.py  CombineExcels.py  ConvertToImages.py  Deskew.py  Readme.md  RefineData.py  Run.py  SplitDoubledRow.py  SplitTableCells.py  pyproject.toml  test_ocr.py
banks/: bidv.py  mb.py  vib.py  vib2.py
banks/z_experiment/: cut_cells_with_img2table.py  deskew_scan.py  test_bordered_table.py  test_deskew.py  test_img2table.py  test_opencv_table.py
libs/: fixers.py  garbage_detector.py  page_range.py
libs/corrections/: bank_names.py
libs/fixers/: balance_fixer.py  stt_fixer.py
libs/formatters/: amount_formatter.py  concat_formatter.py  date_formatter.py  datetime_formatter.py  description_formatter.py  int_formatter.py  stt_formatter.py
