[project]
name = "pdfprocess"
version = "0.1.0"
description = "Process PDF images of tabular data to excel file"
authors = [
    {name = "Kent Nguyen",email = "kent.devvn@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "opencv-python (>=4.10.0)",
    "openpyxl (>=3.1.0)",
    "easyocr (>=1.7.2,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
